# nr-taxonomies

./: .gitignore  .old-travis.yml  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: main.yml
data/excel/: .~lock.countries.xlsx#  .~lock.institutions.xlsx#  .~lock.institutions_csv.csv#  .~lock.institutions_csv_new.csv#  .~lock.institutions_new.xlsx#  NresultsType.xlsx  NresultsUsage.xlsx  Nresults_type.xlsx  Nresults_usage.xlsx  accessRights.xlsx  contributorType.xlsx  countries.xlsx  funders.xlsx  institutions.xlsx  itemRelationType.xlsx  languages.xlsx  licenses.xlsx  resourceType.xlsx  resourceType_relatedItem.xlsx  studyFields.xlsx  subjectCategories.xlsx  subjects.xlsx  tranform_institution_slug.py
data/old_excel/: countries.xlsx  institutions.xlsx  languages.xlsx  licenses.xlsx  resourceType.xlsx  studyFields.xlsx
data/pokyny/: mapovani_projektu_k_poskytovateli_NENÍ_TAXONOMIE.csv
data/temporary_materials/: mapping nr vs nusl resourceType.xlsx  mapping_czech_projects_to_funders.csv  old_mapping_institutions_nusl_vs_nr.xlsx  vocab_documentation_NRdocs_cz.docx  vocabularies_documentation_NRdocs_202205.docx  vocabulary-definitions-v1.0.0.json  vocabulary-model-v1.0.0.json
nr_taxonomies/: __init__.py  cli.py  fetcher.py
tests/: conftest.py  test_cli.py  test_fetcher.py
tests/data/: hello.tar.xz
