[tool]
[tool.poetry]
name = "nr-taxonomies"
version = "1.0.0a6"
description = "NUSL theses data model."
license = "MIT"
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
oarepo-taxonomies = "^3.0.0a1"
requests = "*"
nr-cli = { git = "https://github.com/Narodni-repozitar/nr-cli.git", branch = "master" }


[tool.poetry.dev-dependencies]
oarepo = "^3.3.0"
pytest = "^5.0.0"
pytest-cov = "^2.10.1"

[tool.poetry.extras]
tests = ["oarepo", "pytest", "pytest-cov"]

[tool.poetry.plugins.'flask.commands']
'nr' = 'nr_taxonomies.cli:nr'
