[tool]
[tool.poetry]
name = "techlib-nr-taxonomies"
version = "1.0.7"
description = "NR Taxonomic data."
license = "MIT"
authors = ["Daniel Kopecký <Daniel.Kopecky@techlib.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
requests = "^2.25.1"
oarepo-taxonomies = "^3.0.0a2"
oarepo = "^3.3.0"
pytest = "^5.0.0"
pytest-cov = "^2.10.1"

[tool.poetry.extras]
tests = ["oarepo", "pytest", "pytest-cov"]

[tool.poetry.plugins.'flask.commands']
'nr:taxonomies' = 'nr_taxonomies.cli:nr'
